# backtrader-finstrat

./: CHANGELOG.md  HEFA.html  README.md  pyproject.toml
dev/residual-momentum/: ff-autocorrelation.ipynb  monthly_combined.csv  residual_momentum.ipynb
finstratb/: strategy_hfea_unhedged.py  strategy_idiosync_m_gtaa_py_bb_atr_stoploss.py  strategy_momentum_gtaa_main.py  strategy_momentum_gtaa_py_bb_atr_stoploss.py  strategy_momentum_gtaa_pyramid_bollinger_bands.py  strategy_momentum_gtaa_pyramid_experimental.py  strategy_momentum_gtaa_pyramid_ma.py  strategy_momentum_gtaa_pyramid_up_down.py  strategy_momentum_gtaa_pyramiding.py  strategy_momentum_gtaa_robust.py  universe_11.py
finstratb/experimental_strategies/: strategy_adapt_idiosync_m_gtaa_py_bb_atr_stoploss copy.py  strategy_hfea_hedged.py  strategy_hfea_unhedged.py  strategy_idiosync_cont_risk_gtaa_py_bb_atr_stoploss.py  strategy_idiosync_m_gtaa_py_bb_atr_stoploss_vixx.py  strategy_momentum_gtaa_pyramid_bb_average_momentum.py  strategy_momentum_gtaa_pyramid_constant.py  strategy_momentum_gtaa_pyramid_ma.py  (+5 more)
finstratb/misc/: helpers.py  (+4 more)
results/: hfea_hedged.html  hfea_unhedged.html  idiosync_rotation_stats_gtaa_pyramid_bb_positioning_atr.html  rotation_stats_gtaa.html  rotation_stats_gtaa_pyramid_bb_positioning.html  rotation_stats_gtaa_pyramid_bb_positioning_atr.html  rotation_stats_gtaa_pyramid_delayed_start.html  rotation_stats_gtaa_pyramid_up_down.html  rotation_stats_gtaa_pyramiding.html  rotation_stats_gtaa_pyramiding_absstoploss.html  rotation_stats_gtaa_pyramiding_ma.html  rotation_stats_gtaa_robust.html
