[tool.poetry]
name = "finstratb"
version = "0.1.0"
description = ""
authors = ["Denis L. <lepchev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
yahooquery = "^2.2.15"
matplotlib = "3.2.0"
seaborn = "^0.11.2"
loguru = "^0.5.3"
jupyterlab = "^3.2.1"
statsmodels = "^0.13.0"
backtrader = "^1.9.76"
pyfolio = "^0.9.2"
QuantStats = "^0.0.47"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
